# lp-generator

./: .gitignore  .replit  INSTRUCTIONS.md  add_ai_sidebar.py  ai_assistant.py  app.py  auto_check.py  auto_debugger.py  auto_debugger_full.py  debug_gemini_api.py  fix_guards.py  main.py  pyproject.toml  replit.md  requirements.txt  test_persistence.py
.streamlit/: config.toml
assets/: style.css
data/: chat_history.json  element_types.json  employee_ai_schema.sql  models.json  pricing.json  prompts.json  settings.json  supabase_schema_update.sql  usage_log.json
data/products/: prod_3d7746d3.json  prod_47261438.json  prod_993b84e0.json  prod_b8b744a5.json  prod_d7051064.json  prod_e30a2049.json  prod_e43dbd39.json
data/prompts/: brushup_copy.txt  lp_image_analysis.txt  structure_generation.txt
data/uploads/prod_3748b6d7/sheets/: review_sheet_EC_MallOps_DataHub_v1.xlsx  (+1 more)
modules/: ai_provider.py  ai_sidebar.py  chat_manager.py  data_store.py  data_store.py.backup  element_types.py  file_parser.py  image_analyzer.py  image_factory_manager.py  image_generator.py  model_fetcher.py  model_generator.py  output_generator.py  page_generator.py  page_guard.py  prompt_manager.py  prompt_optimizer.py  settings_manager.py  styles.py  trace_viewer.py  ui_components.py  usage_tracker.py
pages/: 01_product_list.py.bak  01_製品一覧.py  02_情報入力.py  02_情報入力.py.backup  03_モデル設定.py  04_全体構成.py  05_ページ詳細.py  06_出力.py  06_出力.py.backup  07_LP診断.py  07_プロンプト管理.py  08_prompts.py  08_プロンプト管理.py  08_設定.py  09_settings.py  09_設定.py  10_Image_Factory.py
prompts/: default_prompts.json
