[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "supabase>=2.0.0",
    "gotrue>=2.0.0",
    "python-dotenv",
    "google-generativeai",
    "anthropic",
    "openai",
    "python-pptx",
    "Pillow",
]
